imagespace/web_external/stylesheets/layout.styl
@import 'nib'

$headerHeight = 50px
$portraitHeight = 38px

.navbar
    a
        color rgb(180, 180, 180)

    a:hover
        color white

.h-user-link
    font-size 16px

.h-login-link-wrapper
    font-size 16px

.h-user-link-wrapper
    display inline-block

.h-portrait-wrapper
    border-radius 50%
    display inline-block
    margin-right 10px
    background-color #d6d6d6
    height $portraitHeight
    width $portraitHeight
    background-size $portraitHeight $portraitHeight

.h-current-user-text > *
    vertical-align middle
    line-height $headerHeight

.h-current-user-wrapper
    float right

.h-icons-wrapper
    display inline
    line-height $headerHeight
    font-size 21px

#wrapper
    padding-left 0
    -webkit-transition all 0.5s ease
    -moz-transition all 0.5s ease
    -o-transition all 0.5s ease
    transition all 0.5s ease

#wrapper.toggled
    padding-left 250px

#sidebar-wrapper
    z-index 1000
    position fixed
    left 250px
    width 0
    height 100%
    margin-left -250px
    overflow-y auto
    // background #fff
    -webkit-transition all 0.5s ease
    -moz-transition all 0.5s ease
    -o-transition all 0.5s ease
    transition all 0.5s ease
    border-right 1px solid #e6e6e6

#im-app-user-data-container
    padding 15px
    padding-bottom $headerHeight

#wrapper.toggled #sidebar-wrapper
    width 250px

#page-content-wrapper
    width 100%
    position absolute
    padding 15px
    padding-bottom $headerHeight

#wrapper.toggled #page-content-wrapper
    position absolute
    margin-right -250px


@media(min-width:768px) {
    #wrapper {
        padding-left: 250px;
    }

    #wrapper.toggled {
        padding-left: 0;
    }

    #sidebar-wrapper {
        width: 250px;
    }

    #wrapper.toggled #sidebar-wrapper {
        width: 0;
    }

    #page-content-wrapper {
        padding: 20px;
        position: relative;
    }

    #wrapper.toggled #page-content-wrapper {
        position: relative;
        margin-right: 0;
    }
}

.im-searches
    padding-top 5px
    padding-bottom 20px

.im-brand
    padding-top 14px
    padding-bottom 10px
    padding-right 20px
    font-size 20px
    float left

.im-pad-left
    padding-left 10px

.im-alert
    margin-bottom -1px
    border-radius 0px

.im-search-form
    width 70%

.im-search-form-group
    width 60%
    padding-left 200px

.im-image-search-form
    float left

.im-search-image
    height 50px
    float left
    padding-left 200px
    padding-right 50px

.im-search-image:hover
    cursor pointer

#im-app-main-container
    margin 0
    margin-top $headerHeight
    min-height 0
    padding 12px 15px

#g-app-body-container
    margin 0
    min-height 0
    padding 12px 15px

#im-upload
    padding 20px 20px
    margin-bottom 20px

.im-image-area
    overflow-x hidden

.im-actions
    padding-top 30px

img.im-image-thumbnail
    height 100px

img.im-image-detail
    height 250px

.im-caption
    height 70px
    overflow hidden
    margin-top 10px

